Tue Oct 15 15:04:11 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/Makefile.am:
	- Use noinst_HEADERS instead of EXTRA_DIST to specify our
	  private headers.

Tue Oct 15 14:52:55 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* Makefile.am src/pool/Makefile.am:
	- Use automake dist_sysconf_DATA to install our configuration
	  files, instead of rolling our own.

Tue Oct 15 20:37:46 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: fix compile on big endian machine

Tue Oct 15 11:35:59 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/Makefile.am:
	- Bump libtdssrv major version.
	- Use convenience libraries to pull in required symbols.

Tue Oct 15 11:33:47 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/Makefile.am:
	- Use check_PROGRAMS instead of EXTRA_PROGRAMS to build the
	  tests.

Tue Oct 15 11:32:15 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/tsql.c:
	- Add time.h include stuff, needed for struct timeval on
	  some systems.

Tue Oct 15 11:30:04 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in:
	- Use newest LTLIBOBJS hack, fixes support for autoconf 2.53
	  and maintains compatibility with 2.54.

Tue Oct 15 09:37:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/unittests/t0003.c src/ctlib/unittests/t0007.c:
	- Fix type warnings on osf1.

Tue Oct 15 09:00:25 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/query.c:
	- Remove a bug I added recently.
	- Fix prototype warnings.

Tue Oct 15 08:40:06 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/atoll.c src/replacements/strtok_r.c
	  src/replacements/vasprintf.c:
	- More HAVE_* checks before including headers.

Tue Oct 15 08:14:41 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/vasprintf.c:
	- Restore missing close brace.

Tue Oct 15 07:50:40 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/login.c:
	- Use tds_submit_queryf() to set textsize.
