@@ -1,10 +1,20 @@
-# version $Id: Makefile.am,v 1.20 2002/10/15 18:54:25 castellano Exp $
+# version $Id: Makefile.am,v 1.21 2002/10/15 20:07:41 castellano Exp $
 SUBDIRS		=	include src doc samples
 
 EXTRA_DIST	=	interfaces PWD.in BUGS \
+		freetds.conf locales.conf \
 		autogen.sh freetds.spec.in freetds.spec
 
-dist_sysconf_DATA	=	freetds.conf locales.conf
+ETC            =       $(DESTDIR)$(sysconfdir)
+
+install-data-local:
+	$(mkinstalldirs) $(ETC)
+	if test ! -f $(ETC)/freetds.conf; then \
+		$(INSTALL_DATA) $(srcdir)/freetds.conf $(ETC)/freetds.conf; \
+	fi
+	if test ! -f $(ETC)/locales.conf; then \
+		$(INSTALL_DATA) $(srcdir)/locales.conf $(ETC)/locales.conf; \
+	fi
 
 test:
 	@echo "The 'make test' option has been replaced with 'make check'";
